--- a/blockchain.ipynb
+++ b/blockchain.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Instalaciones:"
+    "#### Instalaciones"
    ]
   },
   {
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "!pip install flask"
+    "# !pip install flask"
    ]
   },
   {
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "!pip install flask-ngrok"
+    "# !pip install flask-ngrok"
    ]
   },
   {
@@ -93,14 +93,14 @@
     }
    ],
    "source": [
-    "!pip install requests"
+    "# !pip install requests"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Librerías:"
+    "#### Librerías"
    ]
   },
   {
@@ -115,8 +115,7 @@
     "from flask import Flask, jsonify, request\n",
     "from flask_ngrok import run_with_ngrok\n",
     "from urllib.parse import urlparse\n",
-    "from uuid import uuid4\n",
-    "import requests"
+    "from uuid import uuid4"
    ]
   },
   {
